--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,8 +1,8 @@
 .cart-page{
     background-color: #000000;
     width: 100%;
-    height: 100vh;
-    color: white;
+    height: auto;
+    color: rgb(255, 255, 255);
 }
 
 .cart-page .navbar{
@@ -34,10 +34,175 @@
   }
 
   .cart-page h2{
-    margin:20px;
+    margin-top:-10px;
+    font-size: 2em;
   }
 
 .tables-class{
   display: grid;
   grid-template-columns: 3fr 1fr;
+}
+
+.sub-nav{
+  display: flex;
+  justify-content: space-between;
+}
+
+.sub-nav{
+  margin: 20px;
+  position: relative;
+}
+.sub-nav  ul{
+  position: absolute;
+  top: -20px;
+  right: 20px;
+
+  
+}
+
+
+.sub-nav .bikescart span {
+  position: absolute;
+  top: -10px;
+  width: 10px;
+  background-color: #8e2841;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 6px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.cart-grid {
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+.summary-sec{
+  /* border: 2px solid #4e4a4a; */
+  display: grid;
+  grid-template-columns: auto 1fr ;
+}
+
+.items{
+  /* border: 2px solid #8e2841; */
+  background-color: #1E1E1E;
+  
+
+}
+
+.items thead{
+  background-color: #8e2841;
+}
+
+th,td{
+  /* border: 1px solid black; */
+  text-align: center;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.order{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.order-box{
+  background-color: #1E1E1E;
+  width: 250px;
+  height:max-content;
+
+
+}
+
+.for-margin h4{
+  margin-bottom: 10px;
+}
+
+.for-margin{
+  margin: 10px;
+}
+
+.order-rows .row{
+  display: flex;
+  justify-content: space-between;
+  
+}
+.order-rows{
+margin: 0px;
+padding: 0px;
+
+}
+
+.items {
+  box-shadow: -2px 3px 20px 0 grey;
+  margin: 50px;
+  margin-top: 0;
+}
+
+.order-box{
+  box-shadow: -2px 3px 20px 0 grey;
+
+}
+
+.items td{
+  margin-top: 100px;
+}
+
+.items button{
+  background-color: #8e2841;
+  border: 0;
+  width: 30px;
+  height:20px;
+  font-weight: bold;
+}
+
+.like-sec {
+  overflow-x: auto;
+  /* margin-left: 30px; */
+   /* Enable horizontal scrolling */
+}
+.like-sec h3{
+  /* overflow-x: auto; */
+  margin-left: 30px;
+   /* Enable horizontal scrolling */
+}
+
+.similar-bikes {
+  display: grid; /* Use CSS Grid to arrange cards */
+  grid-auto-flow: column; /* Arrange items in a single row */
+  gap: 70px; /* Add gap between cards */
+  margin-left: 30px;
+  margin-bottom: 30px;
+
+}
+
+.similar-bikes .card {
+  width: 230px;
+  background-color: #000000;
+  border-radius: 0px;
+   /* Set width of cards */
+}
+
+.like-sec{
+  background-color: #1e1e1e;
+}
+
+.order-box hr {
+  border-color: grey; /* Set border color */
+}
+.items hr {
+  border-color: grey; /* Set border color */
+}
+
+.checkout-btn button{
+  background-color: #FF3465;
+  color: white; /* Text color */
+  padding: 10px 10px; /* Padding */
+  border: none; /* No border */
+  border-radius: 5px; /* Rounded corners */
+  margin-right: 50px; /* Margin between buttons */
+  margin-top: 30px; /* Margin between buttons */
+  cursor: pointer;
 }
