--- a/src/styles/Product_page.css
+++ b/src/styles/Product_page.css
@@ -59,11 +59,32 @@
 
 .text-grid{
     margin: 20px;
+    position: relative;
+}
+.text-grid  ul{
+    position: absolute;
+    top: -20px;
+    right: 20px;
+  
+    
+}
+
+.text-grid .bikescart span {
+    position: absolute;
+    top: -10px;
+    width: 10px;
+    background-color: #8e2841;
+    color: #ffffff;
+    border-radius: 50%;
+    padding: 6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .text-grid h3{
     font-size: 2em ;
     font-weight: 50;
+    margin-top: 50px;
 }
 .text-grid #price{
     font-size: 2em ;
