--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -176,3 +176,10 @@ input::placeholder {
  b{
     margin-top: 10px;
 }
+
+#credit-img img{
+    width: 500px;
+    height: 300px;
+    padding: 0%;
+    margin: 0;
+}
