--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -183,3 +183,28 @@ input::placeholder {
     padding: 0%;
     margin: 0;
 }
+
+.upis{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    margin: 25px;
+}
+
+.gpay{
+    display: flex;
+    justify-content: space-between;
+}
+
+.gpaycheck img{
+    width: 30px;
+}
+
+.gpayimg img{
+    width: 80%;
+}
+.paytmimg img{
+    width: 80%;
+}
+.phonepayimg img{
+    width: 80%;
+}
