--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -98,10 +98,10 @@ body{
     justify-content: center;
 }
 
-h3{
+/* h3{
 text-align: center;
 
-}
+} */
 
 .payment-page .order{
     margin-top: 30px;
